[gd_scene load_steps=22 format=2]

[ext_resource path="res://addons/godot-xr-tools/objects/Object_pickable.tscn" type="PackedScene" id=1]
[ext_resource path="res://objects/guns/commen/gun.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/Game Of Squids.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/images/gunMuzzelFlash/flashSide3.png" type="Texture" id=4]
[ext_resource path="res://assets/images/gunMuzzelFlash/flashBack1.png" type="Texture" id=5]
[ext_resource path="res://assets/images/gunMuzzelFlash/flashSide1.png" type="Texture" id=6]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.495114, 0.099177, 0.0249185 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("mesh/pumpShotGun001/Cylinder003:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rumble")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("reloadErea/bullet:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("reloadErea/bullet:translation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.0292419, 0.0353848, -0.0136491 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("audio/fire Audio:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("audio/pump:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("audio/gunEmpty:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("muzzleFlash:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="SphereMesh" id=4]
radius = 0.01
height = 0.02

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 1, 0, 0, 0.235294 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 0.01, 0.015029, 0.0386632 )

[sub_resource type="QuadMesh" id=9]
size = Vector2( 0.05, 0.05 )

[sub_resource type="ViewportTexture" id=18]
viewport_path = NodePath("ammoDisplay/ammoDisplayView")

[sub_resource type="SpatialMaterial" id=11]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
albedo_texture = SubResource( 18 )

[sub_resource type="DynamicFont" id=8]
size = 120
font_data = ExtResource( 3 )

[sub_resource type="SphereMesh" id=12]
radius = 0.1
height = 0.2

[sub_resource type="SpatialMaterial" id=13]
flags_transparent = true
flags_unshaded = true
params_blend_mode = 1
params_cull_mode = 2
albedo_texture = ExtResource( 5 )

[sub_resource type="PlaneMesh" id=14]
size = Vector2( 0.3, 0.3 )

[sub_resource type="SpatialMaterial" id=15]
flags_transparent = true
flags_unshaded = true
params_blend_mode = 1
params_cull_mode = 2
albedo_texture = ExtResource( 6 )

[sub_resource type="PlaneMesh" id=16]
size = Vector2( 0.3, 0.3 )

[sub_resource type="SpatialMaterial" id=17]
flags_transparent = true
flags_unshaded = true
params_blend_mode = 1
params_cull_mode = 2
albedo_texture = ExtResource( 4 )

[node name="gun" instance=ExtResource( 1 )]
mass = 3.6
script = ExtResource( 2 )
highlight_mesh_instance = NodePath("")

[node name="PickupCenter" parent="." index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000287816, 0.00184308, 0.185768 )

[node name="CollisionShape" parent="." index="1"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.000466764, -0.0448518, -0.016659 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]
anims/RESET = SubResource( 2 )

[node name="casingsSpawn" type="Spatial" parent="." index="3"]
transform = Transform( 0.984808, 0.173648, 0, -0.173648, 0.984808, 0, 0, 0, 1, 0.0246531, 0.0333614, -0.0101199 )

[node name="smokeSpawn" type="Spatial" parent="." index="4"]

[node name="mesh" type="Spatial" parent="." index="5"]

[node name="aim" type="RayCast" parent="." index="6"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.0348259, -0.511028 )
enabled = true
cast_to = Vector3( 0, -45, 0 )
collision_mask = 17

[node name="targetDot" type="MeshInstance" parent="aim" index="0"]
visible = false
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="reloadErea" type="Area" parent="." index="7"]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape" type="CollisionShape" parent="reloadErea" index="0"]
shape = SubResource( 6 )

[node name="ammoDisplay" type="MeshInstance" parent="." index="8"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.124403, 0 )
mesh = SubResource( 9 )
material/0 = SubResource( 11 )

[node name="ammoDisplayView" type="Viewport" parent="ammoDisplay" index="0"]
size = Vector2( 265, 265 )
transparent_bg = true
hdr = false
disable_3d = true
usage = 0
render_target_v_flip = true
render_target_update_mode = 1

[node name="ammoCountText" type="Label" parent="ammoDisplay/ammoDisplayView" index="0"]
margin_right = 265.0
margin_bottom = 265.0
custom_colors/font_color = Color( 1, 0, 0.819608, 1 )
custom_fonts/font = SubResource( 8 )
text = "1"
align = 1
valign = 1

[node name="muzzleFlash" type="Spatial" parent="." index="9"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -0.63076 )
visible = false

[node name="MeshInstance" type="MeshInstance" parent="muzzleFlash" index="0"]
cast_shadow = 0
mesh = SubResource( 12 )
material/0 = SubResource( 13 )

[node name="MeshInstance2" type="MeshInstance" parent="muzzleFlash" index="1"]
transform = Transform( -4.37114e-08, -1, 4.37114e-08, 0, -4.37114e-08, -1, 1, -4.37114e-08, 1.91069e-15, 0, 0, 0 )
cast_shadow = 0
mesh = SubResource( 14 )
material/0 = SubResource( 15 )

[node name="MeshInstance3" type="MeshInstance" parent="muzzleFlash" index="2"]
transform = Transform( -4.37114e-08, -0.707107, -0.707107, 0, 0.707107, -0.707107, 1, -3.09086e-08, -3.09086e-08, 0, 0, 0 )
cast_shadow = 0
mesh = SubResource( 16 )
material/0 = SubResource( 17 )

[node name="MeshInstance4" type="MeshInstance" parent="muzzleFlash" index="3"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0 )
cast_shadow = 0
mesh = SubResource( 14 )
material/0 = SubResource( 15 )

[node name="MeshInstance5" type="MeshInstance" parent="muzzleFlash" index="4"]
transform = Transform( -4.37114e-08, 0.707107, -0.707107, 0, 0.707107, 0.707107, 1, 3.09086e-08, -3.09086e-08, 0, 0, 0 )
cast_shadow = 0
mesh = SubResource( 16 )
material/0 = SubResource( 17 )

[node name="OmniLight" type="OmniLight" parent="muzzleFlash" index="5"]
light_energy = 10.0

[connection signal="body_entered" from="reloadErea" to="." method="_on_reloadErea_body_entered"]
